Update parent and module versions to 0.1.4-SNAPSHOT
- All scripts are now in bin directory
- Add version-set.sh script
- Update build script with native option
- Add new smb-utils module and refactor CLI and auth code to use utils
- Add tests for smb
- Update CLI tool with better error handling
- Update dependencies and POM structure